Added maven package to the slave

--- a/jenkins_ci/Dockerfile
+++ b/jenkins_ci/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:latest
 LABEL MAINTAINER="ZM"
 
+# Set Environment variables
 ARG user=jenkins
 ARG group=jenkins
 ARG uid=1000
@@ -9,13 +10,14 @@ ARG JENKINS_AGENT_HOME=/home/${user}
 
 ENV JENKINS_AGENT_HOME ${JENKINS_AGENT_HOME}
 
+# Add user and the group
 RUN groupadd -g ${gid} ${group} \
     && useradd -d "${JENKINS_AGENT_HOME}" -u "${uid}" -g "${gid}" -m -s /bin/bash "${user}" \
     && echo 'jenkins:screencast' | chpasswd
 
 # Setup the necessary packages
 RUN apt-get update \
-    && apt-get install --no-install-recommends -y openssh-server openjdk-8-jre git \
+    && apt-get install --no-install-recommends -y openssh-server openjdk-8-jre git maven \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 RUN sed -i /etc/ssh/sshd_config \
@@ -29,4 +31,5 @@ WORKDIR "${JENKINS_AGENT_HOME}"
 
 EXPOSE 22
 
+# Make sure SSH i srunning at boot
 CMD ["/usr/sbin/sshd", "-D"]
