--- a/jenkins_ci/docker-compose.yml
+++ b/jenkins_ci/docker-compose.yml
@@ -11,7 +11,9 @@ services:
 
   jenkins-slave:
     build: .
-    image: zm-jenkins-slave:latest
+    image: zm-jenkins-slave-jdk:latest
+    volumes:
+      - jenkins_slave:/home/jenkins
 
 #  jenkins-slave:
 #    image: ubuntu:latest
@@ -21,3 +23,4 @@ services:
 
 volumes:
   jenkins_home:
+  jenkins_slave:
