--- a/jenkins_gitlab/docker-compose.yml
+++ b/jenkins_gitlab/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 # Define Jenkins Service
   jenkins-master:
     image: 'jenkins/jenkins:lts'
+    hostname: 'jenkins.zm-srv-01'
     restart: unless-stopped
     ports:
       - '8080:8080'
@@ -22,6 +23,7 @@ services:
 # Define Gitlab Service
   gitlab-ce:
     image: 'gitlab/gitlab-ce:latest'
+    hostname: 'gitlab.zm-srv-01'
     restart: unless-stopped
     ports:
       - '8888:80'
